Внес изменения от Ильи

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Докуметация отдела РТС
-description: Все знания, что мы получаем, стараемся интегрировать сюда в виде инструкций
+title: База знаний отдела робототехники 3Logic Group
+description: Инструкции и информационные материалы по роботам и аксессуарам, что мы получаем, стараемся интегрировать сюда в виде инструкций
 theme: just-the-docs
 
 url: https://melodicteam.ru
